c3/proofnumbercheck
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/proof.c:1949:10: error: conflicting types for 'proofnumbercheck'
move_s * proofnumbercheck( move_s *retstr, move_s compmove) 
         ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/protos.h:125:8: note: previous declaration is here
move_s proofnumbercheck(move_s compmove);
       ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/proof.c:1976:17: error: expected expression
v3 = *( _OWORD *)&compmove.from; 
                ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/proof.c:1976:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&compmove.from; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/proof.c:2146:17: error: expected expression
v3 = *( _OWORD *)&v24.from; 
                ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/proof.c:2146:9: error: use of undeclared identifier '_OWORD'
v3 = *( _OWORD *)&v24.from; 
        ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/proof.c:2148:12: error: expected expression
*( _OWORD *)&retstr->from = v3; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/proof.c:2148:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&retstr->from = v3; 
   ^
7 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/proofnumbercheck/src/obj/proof.o] Error 1
